<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeActivity"
    android:id="@+id/home_fragment_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_query_edittext"
                    android:layout_width="264dp"
                    android:layout_height="58dp"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Search" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="67dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/actionModeWebSearchDrawable"
                    android:backgroundTint="@color/teal_700"
                    android:contentDescription='"Button for search"'
                    android:foregroundTint="#673AB7"
                    app:strokeColor="#009688" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
