<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="Home" />

    <item
        android:id="@+id/gameDetailsFragment"
        android:icon="@drawable/details_icon"
        android:title="Deatils" />
</menu>