...
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
            android:layout_weight="2"
android:background="@color/teal_700"
            app:itemBackground="@color/teal_700"
...
